# ceremony-field-catalog

./: .clinerules  .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  BuildCatalogService.md  CLAUDE.md  CatalogSmokeTests.http  Dockerfile  GEMINI.md  MOTIVATION.md  OVERVIEW.md  README.md  TESTING.md  TODO.md  docker-compose.yml  opencode.json  package-lock.json  pom.xml  review_prompt.json
.claude/: settings.json
docs/: ARCHITECTURE.md  COMPLETED.md  MONGODB_PERFORMANCE.md  MOTIVATION.md  OBSERVABILITY.md  OVERVIEW.md  TODO.md  req_alignment.md  ui-plan.md
plans/: BACKLOG.md  field-value-capture.md
sdks/: README.md
sdks/python/: README.md  ceremony_catalog_sdk.py  pyproject.toml  requirements.txt  test_ceremony_catalog_sdk.py  test_integration_real_api.py
sdks/python/test_lanes/: README.md
sdks/python/test_lanes/customer/: profile.meta.yaml  profile.xsd
sdks/python/test_lanes/loans/: auto_basic.meta.yaml  auto_basic.xsd
sdks/python/testgen/: __init__.py  __main__.py  cli.py  runner.py
sdks/python/testgen/api/: __init__.py  client.py
sdks/python/testgen/generation/: __init__.py  distributions.py  generator.py  values.py
sdks/python/testgen/meta/: __init__.py  config.py
sdks/python/testgen/xsd/: __init__.py  model.py  parser.py
sdks/python/tests/: __init__.py
sdks/python/tests/testgen/: __init__.py  test_generator.py  test_meta_config.py  test_values.py  test_xsd_parser.py
tests/: CatalogSmokeTests.http
ui/: package-lock.json  (+4 more)
ui-docs/: API_SPECIFICATION.md  README.md  SAMPLE_COMPONENTS.md  TECHNICAL_ARCHITECTURE.md  UI_REQUIREMENTS.md
(+264 files in other folders)
